--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
     <title>Paint.js</title>
     <script type="module" src="vanilla.js"></script>
 </head>
 <body>
         <div class="header">
-            <img src="./icons/icon.png" alt="paint icon">
+            <img src="/assets/icons/icon.png" alt="paint icon">
             <h1>
                 Paint.js
             </h1>
@@ -19,7 +19,7 @@
         
             <header>
                 <div class="header__buttons">
-                    <button>File</button>
+                    <button id="save-file">File</button>
                     <button>Edit</button>
                     <button>View</button>
                     <button>Image</button>
@@ -27,6 +27,17 @@
                     <button>Help</button>
                 </div>
             </header>
+
+            <aside>
+                <nav>
+                    <button id="draw-btn" title="Pincel"></button>
+                    <button id="erase-btn" title="Borrar"></button>
+                    <button id="rectangle-btn" title="Rectangulo/Shift"></button>
+                    <button id="ellipse-btn" title="Ellipse"></button>
+                    <button disabled id="picker-btn" title="Capturar Color"></button>
+                    <button id="clear-btn" title="Limpiar Dibujo"></button>
+                </nav>
+            </aside>
         
             <main>
                 <canvas class="canvas" id="canvas"></canvas>
